Fix align-content in MonthlyEntriesPage: entries__list

--- a/src/pages/MonthlyEntriesPage/MonthlyEntriesPage.scss
+++ b/src/pages/MonthlyEntriesPage/MonthlyEntriesPage.scss
@@ -30,6 +30,7 @@
         width: 100%;
         height: 100%;
         padding: $spacing-24;
+        align-content: flex-start;
     }
     &__item {
         @include flex-col($gap: 0);
@@ -58,7 +59,6 @@
         justify-content: center;
         align-items: center;
         height: 100%;
-        vertical-align: middle;
         &:hover {
             cursor: pointer;
         }
